--- a/Vido.Parking.Core/Vido.Parking.csproj
+++ b/Vido.Parking.Core/Vido.Parking.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C9C6B46E-6D5E-4DAC-940E-A800200F6B22}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vido.Parking.Core</RootNamespace>
-    <AssemblyName>Vido.Parking.Core</AssemblyName>
+    <RootNamespace>Vido.Parking</RootNamespace>
+    <AssemblyName>Vido.Parking</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -57,16 +57,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\Controller.cs" />
     <Compile Include="Controls\Card.cs" />
+    <Compile Include="Events\DataInEvent.cs" />
+    <Compile Include="Events\DevicesChangedEvent.cs" />
+    <Compile Include="Events\EntryEvent.cs" />
     <Compile Include="Interfaces\IDatabase.cs" />
-    <Compile Include="Interfaces\ILane.cs" />
+    <Compile Include="Interfaces\IParking.cs" />
     <Compile Include="Interfaces\ISettingsProvider.cs" />
     <Compile Include="Interfaces\IUidDevice.cs" />
-    <Compile Include="Lane.cs" />
+    <Compile Include="Enums\LaneState.cs" />
+    <Compile Include="Interfaces\IUidDevicesEnumerator.cs" />
+    <Compile Include="Enums\Direction.cs" />
+    <Compile Include="Controls\Lane.cs" />
     <Compile Include="PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RFIDReader.cs" />
-    <Compile Include="UidEvent.cs" />
     <Compile Include="SQLiteDatabase.cs" />
     <Compile Include="Utilites.cs" />
   </ItemGroup>
@@ -96,6 +102,7 @@
       <Name>Vido.RawInput</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
