--- a/Vido.Parking.Core/Vido.Parking.csproj
+++ b/Vido.Parking.Core/Vido.Parking.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Events\DataInEvent.cs" />
     <Compile Include="Events\DevicesChangedEvent.cs" />
     <Compile Include="Events\EntryEvent.cs" />
+    <Compile Include="Events\SettingChangedEvent.cs" />
     <Compile Include="Interfaces\IParking.cs" />
     <Compile Include="Interfaces\ISettingsProvider.cs" />
     <Compile Include="Interfaces\IUidDevice.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Interfaces\IUidDevicesEnumerator.cs" />
     <Compile Include="Enums\Direction.cs" />
     <Compile Include="Controls\Lane.cs" />
+    <Compile Include="Models\LaneSettings.cs" />
     <Compile Include="Utilities\PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RFIDReader.cs" />
