impl RFIDReaderEnumerator in Vido.Parking.Core.Test

--- a/Vido.Parking.Core/Vido.Parking.csproj
+++ b/Vido.Parking.Core/Vido.Parking.csproj
@@ -61,23 +61,30 @@
     <Compile Include="Events\DataInEvent.cs" />
     <Compile Include="Events\DevicesChangedEvent.cs" />
     <Compile Include="Events\EntryEvent.cs" />
-    <Compile Include="Events\SettingChangedEvent.cs" />
     <Compile Include="Interfaces\IParking.cs" />
-    <Compile Include="Interfaces\ISettingsProvider.cs" />
     <Compile Include="Interfaces\IUidDevice.cs" />
     <Compile Include="Enums\LaneState.cs" />
     <Compile Include="Interfaces\IUidDevicesEnumerator.cs" />
     <Compile Include="Enums\Direction.cs" />
     <Compile Include="Controls\Lane.cs" />
-    <Compile Include="Models\LaneSettings.cs" />
+    <Compile Include="LaneConfigs.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="Utilities\PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RFIDReader.cs" />
     <Compile Include="Utilites.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="x64\SQLite.Interop.dll">
@@ -91,10 +98,6 @@
     <ProjectReference Include="..\Vido.Capture\Vido.Capture.csproj">
       <Project>{cce14edc-a03f-4056-ab9d-1ea235f392d5}</Project>
       <Name>Vido.Capture</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Vido.RawInput\Vido.RawInput.csproj">
-      <Project>{d3edee2b-4d2a-4395-80aa-60fe75549e19}</Project>
-      <Name>Vido.RawInput</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
