--- a/Vido.Parking.Core/Vido.Parking.csproj
+++ b/Vido.Parking.Core/Vido.Parking.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Controller.cs" />
     <Compile Include="Events\DataInEvent.cs" />
     <Compile Include="Events\DevicesChangedEvent.cs" />
+    <Compile Include="Events\EntryAllowedEvent.cs" />
     <Compile Include="Events\EntryEvent.cs" />
     <Compile Include="Interfaces\IParking.cs" />
     <Compile Include="Interfaces\IUidDevice.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Enums\Direction.cs" />
     <Compile Include="Controls\Lane.cs" />
     <Compile Include="LaneConfigs.cs" />
+    <Compile Include="Parking.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -75,7 +77,7 @@
     </Compile>
     <Compile Include="Utilities\PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilites.cs" />
+    <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
