--- a/Vido.Parking.Core/App.config
+++ b/Vido.Parking.Core/App.config
@@ -7,7 +7,11 @@
       <section name="Vido.Parking.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
-  <connectionStrings />
+  <connectionStrings>
+    <add name="Vido.Parking.Properties.Settings.vidoparkingConnectionString"
+      connectionString="server=localhost;user id=root;password=123456;database=vidoparking;persistsecurityinfo=True"
+      providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
