--- a/Vido.Parking.Core/Properties/Settings.settings
+++ b/Vido.Parking.Core/Properties/Settings.settings
@@ -8,5 +8,13 @@
     <Setting Name="RootImageDirectoryName" Type="System.String" Scope="User">
       <Value Profile="(Default)">F:\Khanh\SkyDrive\Development\Github\Vido's Projects\Vido\RootImages</Value>
     </Setting>
+    <Setting Name="vidoparkingConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;server=localhost;user id=root;password=123456;database=vidoparking;persistsecurityinfo=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;MySql.Data.MySqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">server=localhost;user id=root;password=123456;database=vidoparking;persistsecurityinfo=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
