--- a/Vido.Parking.Core.Test/app.config
+++ b/Vido.Parking.Core.Test/app.config
@@ -1,5 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-    </configSections>
+  <configSections></configSections>
+  <connectionStrings>
+    <add name="VidoParkingEntities2" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=&quot;&quot;F:\Khanh\SkyDrive\Development\Github\Vido's Projects\Vido\vidoparking.s3db&quot;&quot;&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
