--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Vido.Parking.Core.Test\packages.config" />
   <repository path="..\Vido.Parking.Core\packages.config" />
+  <repository path="..\Vido.Parking\packages.config" />
 </repositories>
