--- a/Vido.Parking.Configs/Vido.Parking.Configs.csproj
+++ b/Vido.Parking.Configs/Vido.Parking.Configs.csproj
@@ -65,6 +65,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vido.Capture\Vido.Capture.csproj">
+      <Project>{cce14edc-a03f-4056-ab9d-1ea235f392d5}</Project>
+      <Name>Vido.Capture</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vido.Parking\Vido.Parking.csproj">
       <Project>{c9c6b46e-6d5e-4dac-940e-a800200f6b22}</Project>
       <Name>Vido.Parking</Name>
