--- a/Vido.Parking.Core.Test/Vido.Parking.Core.Test.csproj
+++ b/Vido.Parking.Core.Test/Vido.Parking.Core.Test.csproj
@@ -142,6 +142,10 @@
       <Project>{9cad97aa-bc66-47b9-918d-5c147b11b60c}</Project>
       <Name>Vido.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Vido.Parking\Vido.Parking.csproj">
+      <Project>{c9c6b46e-6d5e-4dac-940e-a800200f6b22}</Project>
+      <Name>Vido.Parking</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vido.RawInput\Vido.RawInput.csproj">
       <Project>{d3edee2b-4d2a-4395-80aa-60fe75549e19}</Project>
       <Name>Vido.RawInput</Name>
