Impl Parking Logic (Update DB)

--- a/Vido.Parking/App.config
+++ b/Vido.Parking/App.config
@@ -2,15 +2,8 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="Vido.Parking.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <connectionStrings>
-    <add name="Vido.Parking.Properties.Settings.vidoparkingConnectionString" connectionString="server=localhost;user id=root;password=123456;database=vidoparking;persistsecurityinfo=True" providerName="MySql.Data.MySqlClient" />
-    <add name="VidoParkingEntities" connectionString="metadata=res://*/VidoParking.csdl|res://*/VidoParking.ssdl|res://*/VidoParking.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=E:\VidoParking.s3db&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -22,11 +15,4 @@
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
     </providers>
   </entityFramework>
-  <userSettings>
-    <Vido.Parking.Properties.Settings>
-      <setting name="RootImageDirectoryName" serializeAs="String">
-        <value>F:\Khanh\SkyDrive\Development\Github\Vido's Projects\Vido\RootImages</value>
-      </setting>
-    </Vido.Parking.Properties.Settings>
-  </userSettings>
-</configuration>
+<connectionStrings><add name="VidoParkingEntities" connectionString="metadata=res://*/VidoParkingEntities.csdl|res://*/VidoParkingEntities.ssdl|res://*/VidoParkingEntities.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=&quot;&quot;F:\Khanh\SkyDrive\Development\Github\Vido's Projects\Vido\VidoParking.s3db&quot;&quot;&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
