--- a/Vido.Parking/App.config
+++ b/Vido.Parking/App.config
@@ -15,4 +15,7 @@
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="VidoParkingEntities" connectionString="metadata=res://*/VidoParkingEntities.csdl|res://*/VidoParkingEntities.ssdl|res://*/VidoParkingEntities.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=&quot;&quot;F:\Khanh\SkyDrive\Development\Github\Vido's Projects\Vido\VidoParking.s3db&quot;&quot;&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="VidoParkingEntities" connectionString="metadata=res://*/VidoParkingEntities.csdl|res://*/VidoParkingEntities.ssdl|res://*/VidoParkingEntities.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=&quot;&quot;F:\Khanh\SkyDrive\Development\Github\Vido's Projects\Vido\VidoParking.s3db&quot;&quot;&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
