--- a/Vido.Parking.Ui.Wpf/Vido.Parking.Ui.Wpf.csproj
+++ b/Vido.Parking.Ui.Wpf/Vido.Parking.Ui.Wpf.csproj
@@ -63,6 +63,9 @@
     </ApplicationDefinition>
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="InputDeviceList.cs" />
+    <Compile Include="ISettingsProvider.cs" />
+    <Compile Include="SettingKeys.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Utilities\NotificationObject.cs" />
     <Compile Include="ViewModels\LaneViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
@@ -111,6 +114,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="App.Config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
