Lane Configs Form

--- a/Vido.Parking.Ui.Wpf/Vido.Parking.Ui.Wpf.csproj
+++ b/Vido.Parking.Ui.Wpf/Vido.Parking.Ui.Wpf.csproj
@@ -74,8 +74,12 @@
     <Compile Include="InputDeviceList.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Utilities\NotificationObject.cs" />
+    <Compile Include="ViewModels\LaneManagementViewModel.cs" />
     <Compile Include="ViewModels\LaneViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="Views\LaneManagementView.xaml.cs">
+      <DependentUpon>LaneManagementView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LaneView.xaml.cs">
       <DependentUpon>LaneView.xaml</DependentUpon>
     </Compile>
@@ -94,6 +98,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\LaneManagementView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\LaneView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
