--- a/Vido/Vido.csproj
+++ b/Vido/Vido.csproj
@@ -46,6 +46,28 @@
     <Compile Include="Capture\Enums\Coding.cs" />
     <Compile Include="IFileStorage.cs" />
     <Compile Include="IImageHolder.cs" />
+    <Compile Include="Parking\Controller.cs" />
+    <Compile Include="Parking\ControllerServices.cs" />
+    <Compile Include="Parking\Enums\Direction.cs" />
+    <Compile Include="Parking\Enums\LaneState.cs" />
+    <Compile Include="Parking\Events\DataInArgs.cs" />
+    <Compile Include="Parking\Events\DevicesChangedArgs.cs" />
+    <Compile Include="Parking\Events\EntryAllowedArgs.cs" />
+    <Compile Include="Parking\Events\EntryArgs.cs" />
+    <Compile Include="Parking\Events\NewMessageArgs.cs" />
+    <Compile Include="Parking\Events\SavedImagesArgs.cs" />
+    <Compile Include="Parking\ICardManagement.cs" />
+    <Compile Include="Parking\IDailyDirectory.cs" />
+    <Compile Include="Parking\IDataCenter.cs" />
+    <Compile Include="Parking\ILane.cs" />
+    <Compile Include="Parking\InOutArgs.cs" />
+    <Compile Include="Parking\IParking.cs" />
+    <Compile Include="Parking\IUniqueIdDevice.cs" />
+    <Compile Include="Parking\IUniqueIdDeviceList.cs" />
+    <Compile Include="Parking\Lane.cs" />
+    <Compile Include="Parking\LaneConfigs.cs" />
+    <Compile Include="Parking\Utilities\Encode.cs" />
+    <Compile Include="Parking\Utilities\Requires.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
