--- a/Vido.Capture.Test/Vido.Capture.Test.csproj
+++ b/Vido.Capture.Test/Vido.Capture.Test.csproj
@@ -76,9 +76,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Vido.Capture\Vido.Capture.csproj">
-      <Project>{cce14edc-a03f-4056-ab9d-1ea235f392d5}</Project>
-      <Name>Vido.Capture</Name>
+    <ProjectReference Include="..\Vido.Desktop\Vido.Desktop.csproj">
+      <Project>{6365eaa0-d898-4827-8450-ca06ebfbe1e6}</Project>
+      <Name>Vido.Desktop</Name>
     </ProjectReference>
     <ProjectReference Include="..\Vido\Vido.csproj">
       <Project>{7cf77cbb-8bbc-41f9-8f26-48095e1b6759}</Project>
