--- a/Vido.Parking.Ui.Wpf/App.Config
+++ b/Vido.Parking.Ui.Wpf/App.Config
@@ -1,6 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
     <add name="VidoParkingEntities" connectionString="metadata=res://*/VidoParking.csdl|res://*/VidoParking.ssdl|res://*/VidoParking.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=&quot;&quot;Z:\Vido\VidoParking.s3db&quot;&quot;&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
