--- a/Vido.Desktop/Vido.Desktop.csproj
+++ b/Vido.Desktop/Vido.Desktop.csproj
@@ -46,15 +46,22 @@
     <Compile Include="Capture\MJpegStream.cs" />
     <Compile Include="FileStorage.cs" />
     <Compile Include="BitmapImageHolder.cs" />
+    <Compile Include="InputDevice.cs" />
+    <Compile Include="InputDeviceList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vido.RawInput\Vido.RawInput.csproj">
+      <Project>{d3edee2b-4d2a-4395-80aa-60fe75549e19}</Project>
+      <Name>Vido.RawInput</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vido\Vido.csproj">
       <Project>{7cf77cbb-8bbc-41f9-8f26-48095e1b6759}</Project>
       <Name>Vido</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Input\" />
     <Folder Include="Parking\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
