--- a/Vido.Parking.Ui.Wpf/App.Config
+++ b/Vido.Parking.Ui.Wpf/App.Config
@@ -14,4 +14,12 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.0" newVersion="3.3.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
