--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\Vido.Parking.Old\packages.config" />
   <repository path="..\Vido.Parking.Ui.Wpf\packages.config" />
   <repository path="..\Vido.Parking\packages.config" />
+  <repository path="..\Vido\packages.config" />
 </repositories>
